# webtail

./: Cargo.toml  LICENSE  README.md
src/: index.rs  main.rs  ws.rs
templates/: index.html
