[package]
name = "webtail-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.2.0", features = ["auth"] }
clap = { version = "3", features = ["derive"] }
askama = "0.10"
linemux = "0.2"